styles/shared.css
body {
	font-family: 'Montserrat', sans-serif;
	margin: 0 auto;
}
section {
	width: 100%;
}
#site-title {
	font-weight: 200;
	font-size: 36px;
	color: rgba(69, 161, 246, 1);
	margin-left: 30px;
	margin-top: 20px;
	display: inline-block;
}
#site-logo {
	position: absolute;
	top: 20px;
	left: 166px;
}
#drop-menu {
	position: absolute;
	right: 30px;
	top: 28px;
}
#lp-hook {
	text-align: center;
	font-weight: 400;
	font-size: 40px;
	margin-top: 70px;
	margin-bottom: 20px;
	padding: 0 40px;
}
#lp-brief {
	text-align: center;
	padding: 0 35px;
	margin: 0 auto;
	font-weight: 200;
	font-size: 20px;
	color: rgba(0, 0, 0, 0.5);
	max-width: 620px;
}
.button-style {
	display: block;
	margin: 0 auto;
	height: 65px;
	font-size: 28px;
	font-weight: 200;
	color: white;
	background-color: rgba(69, 161, 246, 1);
	border-radius: 5px;
}
#get-started-button {
	margin-top: 50px;
	width: 225px;
}
#lp-section-1 {
	margin-bottom: 200px;
}
.image-container {
	margin: 0 auto;
	height: 200px;
	width: 85%;
	background-size: cover;
	border-radius: 5px;
	max-width: 500px;
	text-align: center;
}
#create-image {
	background-image: url("../img/BudgIT_create.jpeg");
}
#build-image {
	background-image: url("../img/BudgIT_build.jpeg");
}
#maintain-image {
	background-image: url("../img/BudgIT_maintain.jpeg");
}
.lp-title {
	font-weight: 200;
	font-size: 40px;
	text-align: center;
	vertical-align: middle;
	background-color: rgba(255, 255, 255, 0.8);
	display: inline-block;
	padding: 0 10px;
	margin-top: 80px;
	border-radius: 5px;
}
.lp-text {
	text-align: center;
	font-weight: 200;
	font-size: 20px;
	margin: 40px auto;
	padding: 0 30px;
	max-width: 600px;
}
.lp-text-bold {
	font-weight: 500;
}
footer {
	width: 100%;
  	height: 20px;
  	background-color: rgba(69, 161, 246, 1);
  	margin-top: 100px;
  	text-align: center;
  	color: white;
  	font-weight: 200;
  	font-size: 16px;
}
#footer-link {
	color: white;
}
/*@media only screen and (min-width: 600px) {
	#lp-section-1 {
		margin: 0 auto;

	}
	#get-started-button {
		margin-top: 150px;
		margin-bottom: 150px;
	}
}*/

